--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -22,6 +22,8 @@ esp-idf-svc  = "=0.47.3"
 shtcx        = "=0.11.0"
 toml-cfg     = "=0.1.3"
 wifi         = { path = "../../common/lib/wifi" }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 
 [build-dependencies]
 embuild  = "=0.31.4"
